# miscllaneous

./: Franklin's quote  Open SSL investigation report.doc  README.md  access_order.cc  addrinfo.cc  addrinfo_accept.cc  addrinfo_connect.cc  agent makefile  algorithm url  astyle.bat  batch-touch  blfs-JS-38.2.1  blfs.zbar.install  build sound card driver into kernel  cc.rar  cmake_win_template  disable xmlto  dolphin related  faststone.sn  fox gui compiles against linbpng 1.6  funny_comments  imagemagick.install  install-libreoffice-from-deb  intermediate.openssl.cnf  ipv6-only-option  is_number.cpp  issue-certificante.cmd  kchmviewer  kwin-5.10.5 build against Qt5.9.4  lfs-caveats  lfs-issue  libevent_proxy.c  linux-from-scratch-caveats  loop_read_write.cc  make-certs.bat  makefile template  missing application icons  mk-cert  mkcerts-withpass.bat  mkfile  (+15 more)
cpp_snippet/: beginthreadex.cc
freebsd/: disk_organization
linux/xfce/: autohide-panel
webservices/: CMakeLists.txt
